@@ -282,7 +282,16 @@ name|put
 argument_list|(
 literal|"min"
 argument_list|,
+literal|'"'
+operator|+
+name|Float
+operator|.
+name|toString
+argument_list|(
 name|min
+argument_list|)
+operator|+
+literal|'"'
 argument_list|)
 expr_stmt|;
 name|params
@@ -291,7 +300,16 @@ name|put
 argument_list|(
 literal|"max"
 argument_list|,
+literal|'"'
+operator|+
+name|Float
+operator|.
+name|toString
+argument_list|(
 name|max
+argument_list|)
+operator|+
+literal|'"'
 argument_list|)
 expr_stmt|;
 return|return
