@@ -240,7 +240,16 @@ name|put
 argument_list|(
 literal|"avg"
 argument_list|,
+literal|'"'
+operator|+
+name|Float
+operator|.
+name|toString
+argument_list|(
 name|avg
+argument_list|)
+operator|+
+literal|'"'
 argument_list|)
 expr_stmt|;
 name|params
@@ -249,7 +258,16 @@ name|put
 argument_list|(
 literal|"std"
 argument_list|,
+literal|'"'
+operator|+
+name|Float
+operator|.
+name|toString
+argument_list|(
 name|std
+argument_list|)
+operator|+
+literal|'"'
 argument_list|)
 expr_stmt|;
 return|return
