@@ -210,6 +210,9 @@ Bug Fixes
 * SOLR-10277: On 'downnode', lots of wasteful mutations are done to ZK.
   (Joshua Humphries, Scott Blum, Varun Thacker, shalin)
 
+* SOLR-10421: Fix params persistence for solr/contrib/ltr (MinMax|Standard)Normalizer classes.
+  (Jianxiong Dong, Christine Poerschke)
+
 ==================  6.5.0 ==================
 
 Consult the LUCENE_CHANGES.txt file for additional, low level, changes in this release.
